tests/snapshots/integration__integration_tests__security__branch_name_with_cd_directive_not_executed.snap
---
source: tests/integration_tests/security.rs
info:
  program: wt
  args:
    - "--internal"
    - switch
    - "--create"
    - __WORKTRUNK_CD__/tmp
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: /dev/null
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1761609600"
    WORKTRUNK_CONFIG_PATH: /var/folders/wf/s6ycxvvs4ln8qsdbfx40hnc40000gn/T/.tmpR8clH4/test-config.toml
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
❌ [31mBranch [1m[31m__WORKTRUNK_CD__[PATH]
