tests/snapshots/integration__integration_tests__security__error_message_with_directive_not_executed.snap
---
source: tests/integration_tests/security.rs
info:
  program: wt
  args:
    - "--internal"
    - switch
    - __WORKTRUNK_EXEC__echo PWNED > /tmp/hacked6
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: "[TEST_GIT_CONFIG]"
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1735776000"
    WORKTRUNK_BIN: ""
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
❌ [31mFailed to create worktree for [1m__WORKTRUNK_EXEC__echo PWNED > /tmp/hacked6[22m[39m
[107m [0m  fatal: invalid reference: __WORKTRUNK_EXEC__echo PWNED > /tmp/hacked6
